--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -356,8 +356,8 @@
                         <em>{{ pkg_name }}</em> is yet another
                         <a class="uk-link-text" href="https://www.google.com/search?q=what's+my+ip+address">"what's my IP address"</a>
                         service, currently running version {{ version }}. Feel free to use it as much as you like to, to query it
-                        automatically, and to clone and to fork it. Please mind that rate limiting may be applied. If you like,
-                        you can to contact me on
+                        automatically, and to clone and to fork it. Please mind that rate limiting may be applied. If you like to,
+                        you can contact me on
                         <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github; ratio: 0.5"></a> and
                         <a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter; ratio: 0.5"></a>.
                     </div>
