--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -49,13 +49,13 @@
                             <h1 class="mono">{{ ip.addr }}</h1>
                         </div>
                     </div>
-                    <div class="uk-width-1-4@m">
+                    <div class="uk-width-1-4@m uk-text-break">
                         <div>
                             <h4>Hostname</h4>
                             <span class="mono">{{ host.name }}</span>
                         </div>
                     </div>
-                     <div class="uk-width-1-4@m">
+                     <div class="uk-width-1-4@m uk-text-break">
                         <div>
                             <h4>Location</h4>
                             <span class="mono">{{#if location.city }}{{ location.city }}{{else}}-{{/if}}, {{#if location.country}}{{ location.country }}{{else}}-{{/if}}</span>
