Add other resources for JSON output

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -101,7 +101,7 @@
                                                 <li class="uk-active"><a href="#"><span class="mono">/</span></a></li>
                                                 <li><a href="#"><span class="mono">/ip</span></a></li>
                                                 <li><a href="#"><span class="mono">/tcp</span></a></li>
-                                                <li><a href="#"><span class="mono">/hostname</span></a></li>
+                                                <li><a href="#"><span class="mono">/host</span></a></li>
                                                 <li><a href="#"><span class="mono">/location</span></a></li>
                                                 <li><a href="#"><span class="mono">/isp</span></a></li>
                                                 <li><a href="#"><span class="mono">/user_agent</span></a></li>
@@ -184,9 +184,9 @@
                                                             <dl class="uk-description-list">
                                                                 <dt>JSON</dt>
                                                                 <script>
-                                                                    $(document).ready(get_ifconfig_json("/hostname", "#api-json-hostname"));
+                                                                    $(document).ready(get_ifconfig_json("/host", "#api-json-host"));
                                                                 </script>
-                                                                <dd><pre id="api-json-hostname" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-host" class="mono-pre"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
