--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -314,7 +314,7 @@
                                                 <dt>curl for Json</dt>
                                                 <dd>
                                                     <script>
-                                                        $(document).ready(get_ifconfig_json("/isp", "#cli-curl-json-slash"));
+                                                        $(document).ready(get_ifconfig_json("/", "#cli-curl-json-slash"));
                                                     </script>
 <pre class="mono-pre" id="cli-curl-json-slash">> curl -H "Accept: application/json" {{ base_url }}{{ uri }}
 </pre>
